# aceryx

./: .gitignore  .nojekyll  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSING.md  README.md  SECURITY.md  about.html  bootstrap.sh  go.mod  go.sum  ideas.html  index.html  qp.yaml  robots.txt  search.json  sitemap.xml  storage.html  ui_design.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  ci.yml  manual.yml
ai-components/: document_classification.yaml  document_extraction.yaml  draft_response.yaml  keyword_extraction.yaml  pii_detection.yaml  sentiment_analysis.yaml  urgency_scoring.yaml
api/: observability_test.go  routes.go
api/handlers/: activity.go  agentic.go  agents.go  ai_components.go  ai_components_test.go  assistant.go  assistant_test.go  audit.go  auth.go  cases.go  connectors.go  errors.go  extraction.go  extraction_test.go  health.go  health_test.go  llm.go  llm_test.go  mcp.go  mcp_server_admin.go  plugins.go  rag.go  reports.go  tasks.go  tenants.go  vault.go  workflows.go  workflows_test.go
api/middleware/: auth.go  correlation.go  maintenance.go  metrics.go  observability_test.go  rbac.go  requestlog.go
cmd/aceryx/: main.go  plugin.go  plugin_test.go
docs/: _quarto.yml  aceryx-design-thinking-v0_6.md  aceryx-specs-020-036.md  ideas.qmd  index.qmd  storage.qmd  styles.css  ui_design.qmd
docs/superpowers/: PR-PLAYBOOK.md
docs/unimplemented/: 001-postgres-schema-updated.md  001-postgres-schema.md  002-execution-engine.md  003-case-management-api.md  004-human-tasks.md  005-connector-framework.md  006-agent-steps.md  007-vault.md  008-rbac.md  009-schema-driven-forms.md  010-visual-builder.md  011-audit-trail.md  012-notifications.md  013-branding-theming-terminology.md  014-llm-reports.md  015-keyboard-shortcuts.md  016-activity-feed.md  017-mobile-responsive.md  018-observability.md  019-backup-restore.md  020-ai-assistant.md  021-code-component.md  022-channels.md  023-document-extraction.md  024-plugin-runtime.md  025-plugin-sdk.md  026-plugin-manifest-registry.md  027-core-drivers.md  028-http-connector-framework.md  029-trigger-plugin-framework.md  030-ai-component-registry.md  031-llm-adapter-framework.md  032-rag-infrastructure.md  033-lightweight-execution.md  034-opinionated-packs.md  035-quantlib-wasm.md  036-custom-logic-plugin.md  037-mcp-client.md  038-mcp-server.md  039-agentic-reasoning.md  (+2 more)
frontend/: embed.go  index.html  package-lock.json  package.json  vite.config.ts
frontend/e2e/: builder.playwright.ts  mobile.playwright.ts
frontend/public/: manifest.json
frontend/src/: App.spec.ts  App.vue  main.ts  style.css  types.ts
internal/activity/: service.go  service_test.go
internal/agentic/: api.go  api_test.go  constraints.go  constraints_test.go  context_mgmt.go  context_mgmt_test.go  escalation.go  output.go  output_test.go  prompt.go  prompt_test.go  runner.go  runner_test.go  step.go  step_test.go  store.go  store_pg.go  store_pg_test.go  tools.go  tools_test.go  types.go  validate_tool.go  validate_tool_test.go
internal/agents/: agents.go  agents_test.go  context.go  escalation.go  executor.go  invocation.go  llm.go  llm_test.go  models.go  service.go  sources.go  template.go  validation.go
internal/ai/: api.go  api_test.go  component.go  executor.go  executor_test.go  registry.go  registry_test.go  step.go  step_test.go  store.go  store_pg.go  store_pg_test.go  template.go  template_test.go  validate.go  validate_test.go
internal/assistant/: api.go  api_logging_test.go  api_normalize_test.go  diff.go  diff_test.go  prompt_pack.go  prompt_pack_test.go  types.go
internal/audit/: audit.go  audit_test.go
internal/backup/: archive.go  conn.go  maintenance.go  metadata.go  models.go  pg_dump.go  pg_restore.go  service.go  vault_ops.go
internal/cases/: case_helpers.go  case_loaders.go  case_queries.go  case_types.go  cases.go  cases_crud.go  merge.go  merge_test.go  models.go  number_test.go  pq_arrays.go  reports_service.go  service.go  validation.go  validation_test.go
internal/channels/: adapter.go  adapter_test.go  api.go  case_type_adapter.go  dedup.go  dedup_test.go  json_helpers.go  manager.go  paths.go  pipeline.go  pipeline_test.go  runners.go  runners_test.go  store.go  store_pg.go  trigger_adapter.go  trigger_adapter_test.go  types.go  vault_adapter.go
internal/connectors/: connectors.go  executor.go  httpclient.go  registry.go  registry_test.go  secrets.go  template.go  template_test.go  types.go
internal/drivers/: api.go  file_config_cloud.go  http_helpers.go  interfaces.go  pool.go  pool_test.go  query.go  query_test.go  registry.go  registry_test.go  secrets.go  secrets_test.go
manual/: go.mod  hugo.toml
migrations/: 001_initial.sql  002_case_management_views.sql  003_rbac_auth.sql  004_connector_framework.sql  005_llm_reports.sql  006_plugin_runtime.sql  007_llm_adapter.sql  008_trigger_framework.sql  009_channels.sql  010_ai_component_registry.sql  011_rag_infrastructure.sql  012_mcp_client.sql  013_mcp_server.sql  014_agentic_reasoning.sql  015_ai_assistant.sql  016_document_extraction.sql
sdk/go/: go.mod  (+12 more)
src/: error.rs  lib.rs  main.rs
tests/: integration_tests.rs
(+517 files in other folders)
